--- a/Resources/Prototypes/_Goobstation/GameRules/secretplus.yml
+++ b/Resources/Prototypes/_Goobstation/GameRules/secretplus.yml
@@ -52,6 +52,7 @@
     Wizard: 0.025
     CosmicCult: 0.07 # Omu - Increase from 0.05 due to rev removal
     CorporateAgent: 0.035 # Omu - Increase from 0.025 due to rev removal
+    OopsAllThieves: 0.05
 
 # all roundstart antags
 - type: weightedRandom
