--- a/Resources/Prototypes/_Goobstation/GameRules/midround.yml
+++ b/Resources/Prototypes/_Goobstation/GameRules/midround.yml
@@ -123,7 +123,7 @@
     selectionTime: PostPlayerSpawn
     agentName: heretic-roundend-name
     definitions:
-    - prefRoles: [ SleeperHeretict ]
+    - prefRoles: [ SleeperHeretic ]
     - fallbackRoles: [ Heretic ]
       max: 1
       playerRatio: 15
