Added one Fun Cargo outfit to cargoDrobe (#309)
* added!

* Fix unintended edit in maildrobe.yml

* fix sprite, added to loadouts, fixed typo

Signed-off-by: thetuerk <46725294+ThanosDeGraf@users.noreply.github.com>

* copied formating from cargotechshirtskirt.rsi

Signed-off-by: thetuerk <46725294+ThanosDeGraf@users.noreply.github.com>

---------

Signed-off-by: thetuerk <46725294+ThanosDeGraf@users.noreply.github.com>

--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -939,6 +939,7 @@
   - CargoTechnicianSweaterSkirt
   - CargoTechnicianShortPantsIfuckinghateyouifyouwearthisbtw
   - CargoTechnicianShortSkirtsInsteadofPants
+  - CargoTechnicianUniformTopInsteadOfJumpsuit
   # OmuStation End
   - CargoTechnicianJumpsuitMail # Goob/DeltaV - Mail
   - CargoTechnicianJumpskirtMail # Goob/DeltaV - Mail
