--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/coats.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/coats.yml
@@ -218,11 +218,11 @@
     - Leg
     modifiers:
       coefficients:
-        Blunt: 0.65
-        Slash: 0.65
-        Piercing: 0.6
-        Heat: 0.7
-        Caustic: 0.75
+        Blunt: 0.6 # Omu, was 0.65
+        Slash: 0.6 # Omu, was 0.65
+        Piercing: 0.55 # Omu, was 0.6
+        Heat: 0.55 # Omu, was 0.7
+        Caustic: 0.6  # Omu, was 0.75
   - type: ExplosionResistance
     damageCoefficient: 0.9
   - type: ModifyDelayedKnockdown # Goobstation
@@ -245,11 +245,11 @@
     - Leg
     modifiers:
       coefficients:
-        Blunt: 0.65
-        Slash: 0.65
-        Piercing: 0.7
-        Heat: 0.7
-        Caustic: 0.9
+        Blunt: 0.6 # Omu, was 0.65
+        Slash: 0.6 # Omu, was 0.65
+        Piercing: 0.65 # Omu, was 0.7
+        Heat: 0.55 # Omu, was 0.7
+        Caustic: 0.8 # Omu, was 0.9
   - type: ExplosionResistance
     damageCoefficient: 0.9
   - type: ModifyDelayedKnockdown # Goobstation
@@ -652,7 +652,7 @@
   parent: [ClothingOuterStorageBase, BaseSecurityContraband, BaseSecondSkinHolder] # Goobstation
   id: ClothingOuterCoatAMG
   name: armored medical gown
-  description: The version of the medical gown, with elements of an armor vest, looks strange, but your heart is protected.
+  description: The version of the medical gown, with elements of a bulletproof vest, looks strange, but your heart is protected. # Omu, revert desc change
   components:
   - type: Sprite
     sprite: Clothing/OuterClothing/Coats/brigmedic.rsi
@@ -665,7 +665,7 @@
       coefficients:
         Blunt: 0.7
         Slash: 0.7
-        Piercing: 0.7
+        Piercing: 0.4 # Omu, was 0.7
         Heat: 0.7
         Caustic: 0.4
   - type: ModifyDelayedKnockdown # Goobstation
