--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/vests.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/vests.yml
@@ -58,12 +58,13 @@
       NerveDamage: 0
     coverage:
     - Chest
+    - Groin # Omu, add back groin coverage
     modifiers:
       coefficients:
-        Blunt: 0.6 #ballistic plates = better protection
-        Slash: 0.6
-        Piercing: 0.3
-        Heat: 0.9
+        Blunt: 0.4 # Omu, was 0.6
+        Slash: 0.4 # Omu, was 0.6
+        Piercing: 0.2 # Omu, was 0.3
+        Heat: 0.8 # Omu, was 0.9
   - type: ExplosionResistance
     damageCoefficient: 0.9
   - type: ModifyDelayedKnockdown # Goobstation
@@ -95,14 +96,15 @@
       NerveDamage: 0
     coverage:
     - Chest
+    - Groin # Omu, add back groin coverage
     modifiers:
       coefficients:
-        Blunt: 0.5
-        Slash: 0.5
-        Piercing: 0.7
-        Heat: 0.3
-        Radiation: 0.5
-        Caustic: 0.5
+        Blunt: 0.3 # Omu, was 0.5
+        Slash: 0.3 # Omu, was 0.5
+        Piercing: 0.55 # Omu, was 0.7
+        Heat: 0.2 # Omu, was 0.3
+        Radiation: 0.3 # Omu, was 0.5
+        Caustic: 0.3 # Omu, was 0.5
   - type: ExplosionResistance
     damageCoefficient: 0.5
   - type: FireProtection
@@ -133,12 +135,13 @@
       NerveDamage: 0
     coverage:
     - Chest
+    - Groin # Omu, add back groin coverage
     modifiers:
       coefficients:
-        Blunt: 0.7 #slightly better overall protection but slightly worse than bulletproof armor against bullets seems sensible
-        Slash: 0.7
-        Piercing: 0.5
-        Heat: 0.9
+        Blunt: 0.55 # Omu, was 0.7
+        Slash: 0.55 # Omu, was 0.7
+        Piercing: 0.3 # Omu, was 0.5
+        Heat: 0.8 # Omu, was 0.9
   - type: ExplosionResistance
     damageCoefficient: 0.9
   - type: ModifyDelayedKnockdown # Goobstation
