--- a/Resources/Prototypes/_Goobstation/Entities/Clothing/Head/hats.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Clothing/Head/hats.yml
@@ -46,10 +46,10 @@
       NerveDamage: 0
     modifiers:
       coefficients:
-        Blunt: 0.7
-        Slash: 0.7
-        Piercing: 0.7
-        Heat: 0.8
+        Blunt: 0.3 # Omu, was 0.7
+        Slash: 0.3 # Omu, was 0.7
+        Piercing: 0.3 # Omu, was 0.7
+        Heat: 0.3 # Omu, was 0.8
         Radiation: 0.75
         Caustic: 0.75
   - type: ExplosionResistance
@@ -80,10 +80,10 @@
       NerveDamage: 0
     modifiers:
       coefficients:
-        Blunt: 0.7
-        Slash: 0.7
-        Piercing: 0.7
-        Heat: 0.8
+        Blunt: 0.3 # Omu, was 0.7
+        Slash: 0.3 # Omu, was 0.7
+        Piercing: 0.3 # Omu, was 0.7
+        Heat: 0.3 # Omu, was 0.8
         Radiation: 0.75
         Caustic: 0.75
   - type: ExplosionResistance
@@ -114,10 +114,10 @@
       NerveDamage: 0
     modifiers:
       coefficients:
-        Blunt: 0.7
-        Slash: 0.7
-        Piercing: 0.7
-        Heat: 0.8
+        Blunt: 0.3 # Omu, was 0.7
+        Slash: 0.3 # Omu, was 0.7
+        Piercing: 0.3 # Omu, was 0.7
+        Heat: 0.3 # Omu, was 0.8
         Radiation: 0.75
         Caustic: 0.75
   - type: ExplosionResistance
@@ -148,10 +148,10 @@
       NerveDamage: 0
     modifiers:
       coefficients:
-        Blunt: 0.7
-        Slash: 0.7
-        Piercing: 0.7
-        Heat: 0.8
+        Blunt: 0.3 # Omu, was 0.7
+        Slash: 0.3 # Omu, was 0.7
+        Piercing: 0.3 # Omu, was 0.7
+        Heat: 0.3 # Omu, was 0.8
         Radiation: 0.75
         Caustic: 0.75
   - type: ExplosionResistance
@@ -182,10 +182,10 @@
       NerveDamage: 0
     modifiers:
       coefficients:
-        Blunt: 0.7
-        Slash: 0.7
-        Piercing: 0.7
-        Heat: 0.8
+        Blunt: 0.3 # Omu, was 0.7
+        Slash: 0.3 # Omu, was 0.7
+        Piercing: 0.3 # Omu, was 0.7
+        Heat: 0.3 # Omu, was 0.8
         Radiation: 0.75
         Caustic: 0.75
   - type: ExplosionResistance
@@ -226,10 +226,10 @@
       NerveDamage: 0
     modifiers:
       coefficients:
-        Blunt: 0.7
-        Slash: 0.7
-        Piercing: 0.7
-        Heat: 0.8
+        Blunt: 0.3 # Omu, was 0.7
+        Slash: 0.3 # Omu, was 0.7
+        Piercing: 0.3 # Omu, was 0.7
+        Heat: 0.3 # Omu, was 0.8
         Radiation: 0.75
         Caustic: 0.75
   - type: ExplosionResistance
