--- a/Resources/Prototypes/_Goobstation/Entities/Clothing/OuterClothing/armour.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Clothing/OuterClothing/armour.yml
@@ -39,10 +39,10 @@
     - Chest
     modifiers:
       coefficients:
-        Blunt: 0.6
-        Slash: 0.6
-        Piercing: 0.6
-        Heat: 0.6
+        Blunt: 0.4 # Omu, was 0.6
+        Slash: 0.4 # Omu, was 0.6
+        Piercing: 0.25 # Omu, was 0.6
+        Heat: 0.55 # Omu, was 0.6
   - type: ExplosionResistance
     damageCoefficient: 0.9
   - type: ModifyDelayedKnockdown # Goobstation
@@ -67,10 +67,10 @@
     - Chest
     modifiers:
       coefficients:
-        Blunt: 0.6
-        Slash: 0.6
-        Piercing: 0.4
-        Heat: 0.8
+        Blunt: 0.5 # Omu, was 0.6
+        Slash: 0.5 # Omu, was 0.6
+        Piercing: 0.3 # Omu, was 0.4
+        Heat: 0.3 # Omu, was 0.8
   - type: ExplosionResistance
     damageCoefficient: 0.9
   - type: ModifyDelayedKnockdown # Goobstation
@@ -135,11 +135,11 @@
   - type: Armor
     modifiers:
       coefficients:
-        Blunt: 0.6
-        Slash: 0.6
-        Piercing: 0.7
-        Heat: 0.6
-        Caustic: 0.8
+        Blunt: 0.35 # Omu, was 0.6
+        Slash: 0.35 # Omu, was 0.6
+        Piercing: 0.45 # Omu, was 0.7
+        Heat: 0.35 # Omu, was 0.6
+        Caustic: 0.6 # Omu, was 0.8
 
 - type: entity
   parent: [ ClothingOuterArmorCaptainCarapace, ClothingOuterWinterCoatToggleable ]
@@ -156,11 +156,11 @@
   - type: Armor
     modifiers:
       coefficients:
-        Blunt: 0.6
-        Slash: 0.6
-        Piercing: 0.7
-        Heat: 0.6
-        Caustic: 0.8
+        Blunt: 0.4 # Omu, was 0.6
+        Slash: 0.4 # Omu, was 0.6
+        Piercing: 0.5 # Omu, was 0.7
+        Heat: 0.4 # Omu, was 0.6
+        Caustic: 0.65 # Omu, was 0.8
   - type: ToggleableClothing
     clothingPrototypes:
       head: ClothingHeadHatHoodWinterCapFancy
@@ -232,10 +232,10 @@
     - Chest
     modifiers:
       coefficients:
-        Blunt: 0.5
-        Slash: 0.5
-        Piercing: 0.5
-        Heat: 0.5
+        Blunt: 0.35 # Omu, was 0.5
+        Slash: 0.35 # Omu, was 0.5
+        Piercing: 0.35 # Omu, was 0.5
+        Heat: 0.35 # Omu, was 0.5
   - type: ExplosionResistance
     damageCoefficient: 0.2
   - type: ModifyDelayedKnockdown
