BUGFIX - Floor Goblins not spawning (#5441)
Fixes Floor goblins not spawning

(cherry picked from commit 75bbcf9428132eb15193c09f9083446e57a4fe33)

--- a/Resources/Prototypes/_Goobstation/GameRules/midround.yml
+++ b/Resources/Prototypes/_Goobstation/GameRules/midround.yml
@@ -247,8 +247,9 @@
     chaosScore: 0
   - type: VentCrittersRule
     max: 1
-    table:
-      id: MobFloorGoblin
+    table: !type:GroupSelector
+      children:
+      - id: MobFloorGoblin
   - type: Tag
     tags:
     - MidroundAntag
