[PORT] Corporate secrets (#407)
* corporate secrets (#1056)

Co-authored-by: funkystationbot <funky@funkystation.org>

* omu sutff

* fix a .ftl error

* remove references to metashielded bits

* forgot a space

* fix some issues

* fix it

* Adds Guidebook shortcuts to new metashield to all jobs that need it

---------

Co-authored-by: funkystationbot <funky@funkystation.org>
Co-authored-by: Richard Blonski <48651647+RichardBlonski@users.noreply.github.com>

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -213,6 +213,7 @@
       conditions:
       - !type:PlayerCountCondition
         max: 15
+    - id: BookCorporateSecrets # funky
 
 # No laser table + Laser table
 - type: entityTable
