Add ViroHuds to NanoMed+ and ViroDrobe
- Virology jobs aren't added to our maps so this is the lazy fix
- Includes one for the NanoMedPlus if the ViroDrobe isn't mapped either
- The virology Computer and Server boards are added as contraband to the ViroDrobe (for future usage)
- Added Omu comments to changed lines

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
@@ -109,6 +109,7 @@
     Syringe: 5
     BoxBottle: 3
     ClothingEyesHudMedical: 2
+    ClothingEyesHudViro: 1 # Omu
     ClothingEyesEyepatchHudMedical: 2
     Tourniquet: 6 # Goobstation - start
     MedicalPatchPrefilledBicaridine: 3
