--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/virodrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/virodrobe.yml
@@ -18,8 +18,14 @@
     ClothingShoesColorWhite: 2
     ClothingOuterCoatLabViro: 2
     ClothingOuterWinterViro: 2
+    ClothingEyesHudViro: 2 # Omu
     ClothingMaskSterile: 2
+    ClothingHeadHatHoodBioVirology: 2 # Omu
+    ClothingOuterBioVirology: 2 # Omu
     ClothingBackpackVirology: 2
     ClothingBackpackSatchelVirology: 2
     ClothingBackpackDuffelVirology: 2
     ClothingBackpackMessengerVirology: 2 # Frontier
+  contrabandInventory: # Omu
+    VirologyComputerCircuitboard: 1 # Omu
+    VirologyServerMachineCircuitboard: 1 # Omu
