--- a/Resources/Prototypes/_Omu/Entities/Objects/Specifics/Security/Security_Selectors.yml
+++ b/Resources/Prototypes/_Omu/Entities/Objects/Specifics/Security/Security_Selectors.yml
@@ -14,6 +14,7 @@
     - HosRifleSet
     - HosShotgunSet
     - HosSniperSet
+    - HosKalashSet # Omu
     maxSelectedSets: 1
   - type: StealTarget
     stealGroup: WeaponEnergyGunLawbringer
